--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     targetSdkVersion 28
     versionCode 1
     versionName "1.0"
-    testInstrumentationRunner "cucumber.api.android.CucumberAndroidJUnitRunner"
+    testInstrumentationRunner "io.abdelraouf.learn.cucumber.test.runner.AndroidCucumberTestRunner"
   }
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
@@ -28,7 +28,12 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
   }
-  sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/androidTest/assets/'] } }
+  sourceSets{
+    androidTest{
+      java.srcDirs = ['src/androidTest/java/']
+      assets.srcDirs = ['src/androidTest/assets/']
+    }
+  }
 }
 
 dependencies {
@@ -59,6 +64,8 @@ dependencies {
   androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.1.1'
   androidTestImplementation 'androidx.test.espresso:espresso-web:3.1.1'
   androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.1.1'
+
+  androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
 
   androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.1.1'
 
